--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.krupalpatel.com">Krupalpatel</a> | <span class="far fa-copyright"></span>
+        <span>Created By <a href="www.linkedin.com/in/
+krupal-patel-83876a275
+">Krupalpatel</a> | <span class="far fa-copyright"></span>
             2023 All rights reserved.</span>
     </footer>
 
