--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="www.linkedin.com/in/
-krupal-patel-83876a275
+        <span>Created By <a href="https://www.linkedin.com/in/krupal-patel-83876a275
 ">Krupalpatel</a> | <span class="far fa-copyright"></span>
             2023 All rights reserved.</span>
     </footer>
